--- a/src/components/BtnBlue.css
+++ b/src/components/BtnBlue.css
@@ -12,8 +12,8 @@
   background-color: var(--mainBlue);
   color: var(--mainWhite);
   border: none;
-  border-radius: 12px;
-  font-size: 16px;
+  border-radius: 0.75rem;
+  font-size: 1rem;
   font-weight: bold;
 }
 
